# cppgoogle-cli

./: CMakeLists.txt
.github/workflows/: cmake-single-platform.yml
include/: sheet.hpp
include/google/: auth.hpp  sheets.hpp
src/: main.cpp
